Pull image instead of building it
Running the action is faster if image is pulled
instead of build and run.
Push docker image only if relevant files are modified

--- a/action.yml
+++ b/action.yml
@@ -23,4 +23,11 @@ inputs:
 
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'docker://ilirbekteshi/conftest-action-docker'
+  args:
+    - ${{ inputs.path }}
+    - ${{ inputs.policy }}
+    - ${{ inputs.namespace }}
+    - ${{ inputs.output }}
+    - ${{ inputs.pull_image }}
+    - ${{ inputs.helm }}
