--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - master
+    paths:
+      - 'Dockerfile'
+      - 'entrypoint.sh'
 jobs:
   build:
     runs-on: ubuntu-latest
